# elumine

./: Makefile  README.md  main.py  pyproject.toml
scripts/: migrate.py
src/: __init__.py  main.py
src/cli/: __init__.py  app.py  commands.py
src/cli/handlers/: config.py  ingest.py  rag.py  transcription.py  ui.py
src/config/: __init__.py
src/core/: transcription.py
src/db/: chroma.py  sqlite.py
src/db/migrations/: 001_create_tables.sql
src/services/: chroma_service.py  langchain_service.py
