[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elumine"
version = "0.1.0"
description = "Audio/Video transcription and RAG CLI tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faster-whisper>=1.1.1",
    "ffmpeg-python>=0.2.0",
    "langchain>=0.3.26",
    "langchain-chroma>=0.1.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "pydantic>=2.11.7",
    "rich>=14.0.0",
    "typer>=0.16.0",
    "yt-dlp>=2024.1.0",
]

[project.scripts]
elumine = "src.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src"]
